# visualizer-gl

./: CMakeLists.txt  audio.cpp  audio.hpp  colorcli.hpp  main.cpp
include/glad/: gl.h
shaders/: shader-spec.frag  shader.frag  shader.vert
